--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'com.android.application'
+    
 }
 
 android {
+
     compileSdk 32
 
     defaultConfig {
@@ -29,6 +31,8 @@ android {
 
 dependencies {
 
+    implementation platform('com.google.firebase:firebase-bom:29.2.1')
+    implementation 'com.google.firebase:firebase-analytics'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -36,3 +40,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
