--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.firebase:firebase-firestore:24.0.2'
     testImplementation 'junit:junit:4.+'
     implementation 'com.google.firebase:firebase-core:20.0.2'
     implementation 'com.google.firebase:firebase-database:20.0.3'
