--- a/Project/app/src/main/AndroidManifest.xml
+++ b/Project/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Over The Hill"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.OverTheHill">
@@ -26,6 +26,11 @@
 
         <activity
             android:name=".RegisterActivity"
+            android:exported="false">
+        </activity>
+
+        <activity
+            android:name=".ForgotPassword"
             android:exported="false">
         </activity>
 
