--- a/Project/app/src/main/AndroidManifest.xml
+++ b/Project/app/src/main/AndroidManifest.xml
@@ -34,6 +34,11 @@
             android:exported="false">
         </activity>
 
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false">
+        </activity>
+
     </application>
 
 </manifest>
