--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     implementation 'com.google.firebase:firebase-analytics'
     implementation platform('com.google.firebase:firebase-bom:29.0.4')
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
 
